--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,32 @@
-/* styling for paragraph*/
-p{
-color:blueviolet;
-font-size: 20px;
-background-color: bisque;
-
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif
+}
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
 }
 
-h1, h2{
-font-family:Arial, Helvetica, sans-serif;
+.box {
+    width: 200px;
+    height: 200px;
+    padding: 20px;
+    text-align: center;
+    color: white;
+    font-size: 18px
+}
 
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: blue;
+}
+
+.blue {
+    background-color: green;
 }
