--- a/HN_portfolio/styles.css
+++ b/HN_portfolio/styles.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:'work sans'
+    font-family:'work sans';
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
+    box-sizing: border-box;
 }
 
+/* Navigation bar */
 .navbar {
-    background: rgb(250, 206, 213);
+    background: purple;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -29,8 +35,7 @@
 }
 
 #navbar__logo {
-    background-color: blueviolet;
-    background-image: linear-gradient(to top, orange 0%, purple 100%);
+    background-color: whitesmoke;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -59,7 +64,7 @@
 }
 
 .navbar__links {
-    color: purple;
+    color: whitesmoke;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,19 +93,300 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: orange;
+    background: rgb(229, 13, 229);
     color: white;
     font-weight: bold;
 }
 
 .button:hover {
-    background: purple;
+    background: grey;
     transition: all 0.3s ease; 
 }
 
 .navbar__links:hover {
-    color: orange;
+    color: grey;
     transition: all 0.3s ease;
+}
+
+/* Root values
+
+:root{
+    --container-color: blue;
+    --second-color: yellow;
+    --text-color: black;
+    --bg-color: white;
+}*/
+
+::section{
+    color: var(--bg-color);
+    background: var(--second-color);
+}
+
+a {
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+}
+
+img{
+    width: 100%;
+}
+
+section{
+    padding: 3rem 0 2rem;
+}
+
+.container{
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+}
+
+/* Header
+
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 200;
+}
+
+header.shadow{
+    background: var(--bg-color);
+    box-shadow: 0 1px 4px grey (0 4% 14% / 10%);
+    transition: .5s;
+}
+
+header.shadow .logo{
+    color: var(--text-color);
+}*/
+
+/*.nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 0;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--bg-color);
+}
+
+.logo span{
+    color: var(--second-color);
+}
+
+.login{
+    padding: 8px 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-radius: 4px;
+    background: var(--second-color);
+    color: var(--bg-color);
+}
+
+.login:hover{
+    background: blueviolet;
+    transition: .5s;
+}*/
+
+.home {
+    width: 100%;
+    min-height: 440px;
+    background: url(/BGIT-images/leaf_banner.jpg);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-text-container{
+    color: purple;
+    text-align: center;
+    font-weight: 600;
+}
+
+.home-text-container_2{
+    color: purple;
+    text-align: center;
+    font-weight: 600;
+}
+
+.home-title{
+    font-size: 3.5rem;
+}
+
+.home-subtitle{
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+.about{
+    position: relative;
+    width: 100%;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+}
+
+.about .contentBx {
+    max-width: 50%;
+    width: 50%;
+    text-align: left;
+    padding-right: 40px;
+}
+
+.titleText {
+    font-weight: 600;
+    color: purple;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.title-text{
+    color: black;
+    font-size: 1rem;
+}
+
+.about .imgBx{
+    position: relative;
+    min-width: 50%;
+    width: 50%;
+    min-height: 500px;
+
+}
+
+.btn2{
+    position: relative;
+    display: inline-block;
+    margin-top: 30px;
+    padding: 10px 30px;
+    background: rgb(229, 13, 229);
+    border: 1px solid;
+    border-radius: 4px;
+    color: whitesmoke;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+.btn2:hover{
+    background-color:grey;
+    border: none;
+    color: whitesmoke;
+}
+
+.post-filter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 2rem !important;
+    margin-bottom: 1rem;
+}
+
+.filter-item{
+    font-size: 1.5rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.active-filter{
+    background: purple;
+    color: whitesmoke;
+    padding: 4px 10px;
+    border-radius: 4px;
+}
+
+
+
+.post{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+    /*grid-template-columns: auto auto;*/
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.post-box{
+    background: whitesmoke;
+    box-shadow: 0 4px 14px hs1(35deg 25% 15% / 10%);
+    padding: 15px;
+    border-radius: 0.5rem;
+}
+
+.post-img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 0.5rem;
+}
+
+.category{
+    font-size: 0.9rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: purple;
+}
+
+.post-title{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: black;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.post-date{
+    display: flex;
+    font-size: 0.875rem;
+    text-transform: uppercase; 
+    margin-top:  4px;
+    font-weight: 600px;
+}
+
+.post-description{
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+    margin: 5px 0 10px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile-img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: 2px solid purple;
+}
+
+.profile-name{
+    font-size: .8rem;
+    font-weight: 500;
+}
+
+.widget_container {
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+    display: auto;
 }
 
 @media screen and (max-width: 960px) {
@@ -200,391 +486,153 @@
 
 }
 
-/* Hero Section CSS */
-.main {
-    background-color: rgb(251, 167, 181); 
-}
 
-.main__container {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   align-items: center;
-   justify-self: center;
-   margin: 0 auto;
-   height: 90vh;
-   background-color: white;
-   z-index: 1;
-   width: 100%;
-   max-width: 1300px;
-   padding: 0 50px;
-}
-
-.main__content h1 {
-    font-size: 4rem;
-    background-color:rgb(251, 167, 181);
-    background-image: linear-gradient(to top, orange 0%, purple 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.main__content h2 {
-    font-size: 2rem;
-    background-color:rgb(251, 167, 181);
-    background-image: linear-gradient(to top, orange 0%, purple 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.main__content p {
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-.main__btn {
-    font-size: 1rem;
-    background-image: linear-gradient(to top, orange 0%, purple 100%);
-    padding: 14px 32px;
-    border: none;
-    border-radius: 4px;
-    color:#fff;
-    margin-top: 2rem;
-    cursor: pointer;
+ 
+/* Footer CSS */ 
+footer{
     position: relative;
-    transition: all 0.35s ease;
-    outline: none;
-    font-weight: bold;
-}
-
-.main__btn a {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    text-decoration: none;
-}
-
-.main__btn:after {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: purple;
-    transition: all 0.35s ease;
-    border-radius: 4px;
-}
-
-.main__btn:hover {
-    color: #fff;
-}
-
-.main__btn:hover:after{
-   width: 100% 
-} 
-
-.main__img--container {
-    text-align: center;
-}
-
-#main__img {
-    height: 80%;
-    width: 80%
-}
-
-/* Mobile Responsive */
-@media screen and (max-width: 768px) {
-    .main__container {
-        display: grid;
-        grid-template-columns: auto;
-        align-items: center;
-        justify-self: center;
-        width: 100%;
-        margin: 0 auto;
-        height: 90vh;
-    }
-
-    .main__content {
-        text-align: center;
-        margin-bottom: 4rem;
-    }
-
-    .main__content h1 {
-        font-size: 2.5rem;
-        margin-top: 2rem;
-    }
-
-    .main__content h2 {
-        font-size: 3rem;
-    }
-
-    .main__content p {
-        margin-top: 1rem;
-        font-size: 1.5rem;
-    }
-
-}
-
-@media screen and (max-width: 480px) {
-    .main__content h1 {
-        font-size: 2rem;
-        margin-top: 3rem;
-    }
-
-    .main__content h2 {
-        font-size: 2rem;
-    }
-
-    .main__content p {
-        margin-top: 2rem;
-        font-size: 1.5rem;
-    }
-
-    .main__btn {
-        padding: 12px 36px;
-        margin: 2.5rem 0;
-    }
-}
-
-/* Services Section CSS */
-.services {
+    width: 100%;
+    height: auto;
+    padding: 50px 100px;
+    margin-top: 3rem;
     background: whitesmoke;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 150vh;
+    font-family: sans-serif;
+    justify-content: space-between;
 }
 
-.services h1 {
-    background-color: orange;
-    background-image: linear-gradient(to right, orange 0%, purple 100%);
-    background-size: 100%;
-    margin-bottom: 3rem;
-    font-size: 2.5rem;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.services_container {
+.footer-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
+    flex-direction: row;
 }
 
-.services__card {
-    margin: 1rem;
-    height: 500px;
-    width: 400px;
-    border-radius: 4px;
-    background-color: orange;
-    background-image: url('/BGIT-images/woman_afro.jpg');
-    background-size: cover;
+.footer-container .sec{
+    margin-right: 30px;
+}
+
+.footer-container .sec.aboutus{
+    width: 40%;
+}
+
+.footer-container h2{
     position: relative;
-    color: white;
+    color: purple;
+    margin-bottom: 15px;
 }
 
-.services__card:nth-child(2) {
-    background-image: url('/BGIT-images/Music.jpg');
-}
-
-
-.services h2 {
+.footer-container h2::before{
+    content: '';
     position: absolute;
-    top: 350px;
-    left: 30px;
+    bottom: -5px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: grey;
 }
 
-.services__card p{
-    position: absolute;
-    top: 400px;
-    left: 30px;   
+footer p{
+    color: black;
 }
 
-.services__card button {
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    outline: none;
+.sci{
+    margin: 20px;
+    display: flex;
+}
+
+.sci li{
+    list-style: none;
+}
+
+.sci li a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    text-decoration: none;
     border-radius: 4px;
-    background: purple;
-    position: absolute;
-    top: 440px;
-    left: 30px;
-    font-size: 1rem;
-    cursor: pointer;
+    transition: .5s;
 }
 
-.services__card:hover {
-    transform: scale(1.075);
-    transition: 0.2s ease-in;
-    cursor: pointer;
+.sci li a:hover{
+    background: grey;
 }
 
-@media screen and (max-width: 960px) {
-    .services {
-        height: 1600px;
-
+.sci i a .bx{
+    color: #fff;
+    font-size: 20px;
 }
 
-    .services h1 {
-        font-size: 2rem;
-        margin-top: 12rem;
-    }
-
-}
-
-@media screen and (max-width: 480px) {
-    .services {
-        height: 1400px;
-    }
-
-    .services h1 {
-        font-size: 1.2rem;
-    }
-
-    .services__card {
-        width: 300px;
-    }
-}
- 
-/* Footer CSS */
-.footer__container {
-    background-color: rgb(250, 209, 132);
-    margin-top: 40%;
-    padding: 2rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#footer__logo {
+.quicklinks ul li a:hover{
     color: purple;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
 }
 
-.footer__links {
-    width: 100%;
-    max-width: 1000px;
-    display: flex;
-    justify-content: center;
+.footer-container .contactBx{
+    width: calc(35% - 60px);
+    margin-right: 0 !important;
 }
 
-.footer__link--wrapper {
-    display: flex;
+.contactBx .info{
+    position: relative;
 }
 
-.footer__link--items {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 6px;
-    text-align: left;
-    width: 160px;
-    box-sizing: border-box;
-}
-
-.footer__link--items h2 {
-    margin-bottom: 16px
-}
-
-.footer__link--items > h2 {
-    color:rgb(231, 5, 231);   
-}
-
-.footer__link--items a {
-    color: purple;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-}
-
-.footer__link--items a:hover {
-    color: red;
-    transition: 0.3s ease-out;
-}
-
-/* Social Icons */
-.social__icon--link {
-    color: purple;
-    font-size: 24px;
-}
-
-.social__media {
-    max-width: 1000px;
-    width: 100%;
-}
-
-.social__media--wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    max-width: 1000px;
-    margin: 40px auto 0 auto;
-}
-
-.social__icons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 420px;
-}
-
-.social__logo {
-    color: purple;
-    justify-self: flex-start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
+.contactBx .info li{
+    display: flex !important;
     margin-bottom: 16px;
 }
 
-.website__rights {
+.contactBx .info li span:nth-child(1){
+    color: purple;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.contactBx .info li span{
+    color: black;
+}
+
+.contactBx .info li a{
+    color: black;
+    text-decoration: none;
+    transition: .5s;
+}
+
+.contactBx .info li a:hover{
     color: purple;
 }
 
-@media screen and (max-width: 820px) {
-    .footer__links {
-        padding-top: 2rem;
-    }
-    #footer__logo {
-        margin-bottom:2rem;
-    }  
 
-    .website__rights {
-        margin-bottom: 2rem;
+
+/* Footer Media Query */
+@media (max-width: 991px){
+    footer{
+        padding: 40px;
+        font-size: 20px;
     }
 
-    .footer__link--wrapper {
+    footer .footer-container{
         flex-direction: column;
     }
 
-    .social__media--wrap {
-        flex-direction: column;
+    footer .footer-container .sec{
+        margin-right: 0;
+        margin-bottom: 40px;
     }
-    
-}
 
-@media screen and (max-width: 480px) {
-    .footer__link--items {
-        margin: 0;
-        padding: 10px;
+    footer .footer-container .sec.aboutus{
+        width: 100% !important;
+    }
+
+    footer .footer-container .quicklinks{
+        width: 100%;
+    }
+
+    footer .footer-container .contactBx{
         width: 100%;
     }
 }
-
